gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES
Rule 2     IMPORTES -> R_IMPORT PARIZQ LISTAIMPORTES PARDER PTCOMA
Rule 3     LISTAIMPORTES -> LISTAIMPORTES PTCOMA CADENA
Rule 4     LISTAIMPORTES -> CADENA
Rule 5     PILA_HEAP -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA
Rule 6     PILA_STACK -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA
Rule 7     DECLARACIONES -> DECLARACIONES DECLARACION
Rule 8     DECLARACIONES -> DECLARACION
Rule 9     DECLARACION -> R_VAR LISTAS R_FLOAT PTCOMA
Rule 10    LISTAS -> LISTAS COMA LISTA
Rule 11    LISTAS -> LISTA
Rule 12    LISTA -> ID
Rule 13    FUNCIONES -> FUNCIONES FUNCION
Rule 14    FUNCIONES -> FUNCION
Rule 15    FUNCION -> R_FUNCION ID PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER
Rule 16    FUNCION -> R_FUNCION R_MAIN PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER
Rule 17    INSTRUCCIONES -> INSTRUCCIONES INSTRUCCION
Rule 18    INSTRUCCIONES -> INSTRUCCION
Rule 19    INSTRUCCION -> ASIGNACION
Rule 20    INSTRUCCION -> PRINTS
Rule 21    INSTRUCCION -> ETIQUETAS
Rule 22    INSTRUCCION -> SALTOS
Rule 23    INSTRUCCION -> LLAMADAS
Rule 24    INSTRUCCION -> IFS
Rule 25    INSTRUCCION -> RETURN
Rule 26    RETURN -> R_RETURN PTCOMA
Rule 27    PRINTS -> R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA E PARDER PTCOMA
Rule 28    PRINTS -> R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA R_INT PARIZQ E PARDER PARDER PTCOMA
Rule 29    ETIQUETAS -> ID DOSPUNTITOS
Rule 30    SALTOS -> R_GOTO ID PTCOMA
Rule 31    ASIGNACION -> ID IGUAL E PTCOMA
Rule 32    ASIGNACION -> ARREGLOS IGUAL E PTCOMA
Rule 33    E -> E MAS E
Rule 34    E -> E MENOS E
Rule 35    E -> E POR E
Rule 36    E -> E DIVIDIDO E
Rule 37    E -> PARIZQ E PARDER
Rule 38    E -> R_MATH PUNTO R_MOD PARIZQ E COMA E PARDER
Rule 39    E -> MENOS E
Rule 40    E -> ID
Rule 41    E -> DECIMAL
Rule 42    E -> ENTERO
Rule 43    E -> ARREGLOS
Rule 44    IFS -> R_IF RE LLAVEIZQ SALTOS LLAVEDER
Rule 45    RE -> RE MENQUE RE
Rule 46    RE -> RE MAYQUE RE
Rule 47    RE -> RE IGUALQUE RE
Rule 48    RE -> RE NIGUALQUE RE
Rule 49    RE -> RE MENORIGUAL RE
Rule 50    RE -> RE MAYORIGUAL RE
Rule 51    RE -> PARIZQ RE PARDER
Rule 52    RE -> E
Rule 53    LLAMADAS -> ID PARIZQ PARDER PTCOMA
Rule 54    ARREGLOS -> ID CORIZQ E CORDER
Rule 55    ARREGLOS -> ID CORIZQ R_INT PARIZQ E PARDER CORDER

Terminals, with rules where they appear

CADENA               : 3 4 27 28
COMA                 : 10 27 28 38
CORDER               : 5 6 54 55
CORIZQ               : 5 6 54 55
DECIMAL              : 41
DIVIDIDO             : 36
DOSPUNTITOS          : 29
ENTERO               : 5 6 42
ID                   : 5 6 12 15 29 30 31 40 53 54 55
IGUAL                : 31 32
IGUALQUE             : 47
LLAVEDER             : 15 16 44
LLAVEIZQ             : 15 16 44
MAS                  : 33
MAYORIGUAL           : 50
MAYQUE               : 46
MENORIGUAL           : 49
MENOS                : 34 39
MENQUE               : 45
NIGUALQUE            : 48
PARDER               : 2 15 16 27 28 28 37 38 51 53 55
PARIZQ               : 2 15 16 27 28 28 37 38 51 53 55
POR                  : 35
PTCOMA               : 1 2 3 5 6 9 26 27 28 30 31 32 53
PUNTO                : 27 28 38
R_FLOAT              : 5 6 9
R_FMT                : 27 28
R_FUNCION            : 15 16
R_GOTO               : 30
R_IF                 : 44
R_IMPORT             : 2
R_INT                : 28 55
R_MAIN               : 1 16
R_MATH               : 38
R_MOD                : 38
R_PAQUETES           : 1
R_PRINTF             : 27 28
R_RETURN             : 26
R_VAR                : 5 6 9
error                : 

Nonterminals, with rules where they appear

ARREGLOS             : 32 43
ASIGNACION           : 19
DECLARACION          : 7 8
DECLARACIONES        : 1 7
E                    : 27 28 31 32 33 33 34 34 35 35 36 36 37 38 38 39 52 54 55
ETIQUETAS            : 21
FUNCION              : 13 14
FUNCIONES            : 1 13
IFS                  : 24
IMPORTES             : 1
INICIO               : 0
INSTRUCCION          : 17 18
INSTRUCCIONES        : 15 16 17
LISTA                : 10 11
LISTAIMPORTES        : 2 3
LISTAS               : 9 10
LLAMADAS             : 23
PILA_HEAP            : 1
PILA_STACK           : 1
PRINTS               : 20
RE                   : 44 45 45 46 46 47 47 48 48 49 49 50 50 51
RETURN               : 25
SALTOS               : 22 44

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES

    R_PAQUETES      shift and go to state 2

    INICIO                         shift and go to state 1

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> R_PAQUETES . R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES

    R_MAIN          shift and go to state 3


state 3

    (1) INICIO -> R_PAQUETES R_MAIN . PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES

    PTCOMA          shift and go to state 4


state 4

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA . IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES
    (2) IMPORTES -> . R_IMPORT PARIZQ LISTAIMPORTES PARDER PTCOMA

    R_IMPORT        shift and go to state 6

    IMPORTES                       shift and go to state 5

state 5

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES . PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES
    (5) PILA_HEAP -> . R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    R_VAR           shift and go to state 8

    PILA_HEAP                      shift and go to state 7

state 6

    (2) IMPORTES -> R_IMPORT . PARIZQ LISTAIMPORTES PARDER PTCOMA

    PARIZQ          shift and go to state 9


state 7

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP . PILA_STACK DECLARACIONES FUNCIONES
    (6) PILA_STACK -> . R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    R_VAR           shift and go to state 11

    PILA_STACK                     shift and go to state 10

state 8

    (5) PILA_HEAP -> R_VAR . ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    ID              shift and go to state 12


state 9

    (2) IMPORTES -> R_IMPORT PARIZQ . LISTAIMPORTES PARDER PTCOMA
    (3) LISTAIMPORTES -> . LISTAIMPORTES PTCOMA CADENA
    (4) LISTAIMPORTES -> . CADENA

    CADENA          shift and go to state 14

    LISTAIMPORTES                  shift and go to state 13

state 10

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK . DECLARACIONES FUNCIONES
    (7) DECLARACIONES -> . DECLARACIONES DECLARACION
    (8) DECLARACIONES -> . DECLARACION
    (9) DECLARACION -> . R_VAR LISTAS R_FLOAT PTCOMA

    R_VAR           shift and go to state 17

    DECLARACIONES                  shift and go to state 15
    DECLARACION                    shift and go to state 16

state 11

    (6) PILA_STACK -> R_VAR . ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    ID              shift and go to state 18


state 12

    (5) PILA_HEAP -> R_VAR ID . CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    CORIZQ          shift and go to state 19


state 13

    (2) IMPORTES -> R_IMPORT PARIZQ LISTAIMPORTES . PARDER PTCOMA
    (3) LISTAIMPORTES -> LISTAIMPORTES . PTCOMA CADENA

    PARDER          shift and go to state 20
    PTCOMA          shift and go to state 21


state 14

    (4) LISTAIMPORTES -> CADENA .

    PARDER          reduce using rule 4 (LISTAIMPORTES -> CADENA .)
    PTCOMA          reduce using rule 4 (LISTAIMPORTES -> CADENA .)


state 15

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES . FUNCIONES
    (7) DECLARACIONES -> DECLARACIONES . DECLARACION
    (13) FUNCIONES -> . FUNCIONES FUNCION
    (14) FUNCIONES -> . FUNCION
    (9) DECLARACION -> . R_VAR LISTAS R_FLOAT PTCOMA
    (15) FUNCION -> . R_FUNCION ID PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER
    (16) FUNCION -> . R_FUNCION R_MAIN PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    R_VAR           shift and go to state 17
    R_FUNCION       shift and go to state 25

    FUNCIONES                      shift and go to state 22
    DECLARACION                    shift and go to state 23
    FUNCION                        shift and go to state 24

state 16

    (8) DECLARACIONES -> DECLARACION .

    R_VAR           reduce using rule 8 (DECLARACIONES -> DECLARACION .)
    R_FUNCION       reduce using rule 8 (DECLARACIONES -> DECLARACION .)


state 17

    (9) DECLARACION -> R_VAR . LISTAS R_FLOAT PTCOMA
    (10) LISTAS -> . LISTAS COMA LISTA
    (11) LISTAS -> . LISTA
    (12) LISTA -> . ID

    ID              shift and go to state 28

    LISTAS                         shift and go to state 26
    LISTA                          shift and go to state 27

state 18

    (6) PILA_STACK -> R_VAR ID . CORIZQ ENTERO CORDER R_FLOAT PTCOMA

    CORIZQ          shift and go to state 29


state 19

    (5) PILA_HEAP -> R_VAR ID CORIZQ . ENTERO CORDER R_FLOAT PTCOMA

    ENTERO          shift and go to state 30


state 20

    (2) IMPORTES -> R_IMPORT PARIZQ LISTAIMPORTES PARDER . PTCOMA

    PTCOMA          shift and go to state 31


state 21

    (3) LISTAIMPORTES -> LISTAIMPORTES PTCOMA . CADENA

    CADENA          shift and go to state 32


state 22

    (1) INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES .
    (13) FUNCIONES -> FUNCIONES . FUNCION
    (15) FUNCION -> . R_FUNCION ID PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER
    (16) FUNCION -> . R_FUNCION R_MAIN PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    $end            reduce using rule 1 (INICIO -> R_PAQUETES R_MAIN PTCOMA IMPORTES PILA_HEAP PILA_STACK DECLARACIONES FUNCIONES .)
    R_FUNCION       shift and go to state 25

    FUNCION                        shift and go to state 33

state 23

    (7) DECLARACIONES -> DECLARACIONES DECLARACION .

    R_VAR           reduce using rule 7 (DECLARACIONES -> DECLARACIONES DECLARACION .)
    R_FUNCION       reduce using rule 7 (DECLARACIONES -> DECLARACIONES DECLARACION .)


state 24

    (14) FUNCIONES -> FUNCION .

    R_FUNCION       reduce using rule 14 (FUNCIONES -> FUNCION .)
    $end            reduce using rule 14 (FUNCIONES -> FUNCION .)


state 25

    (15) FUNCION -> R_FUNCION . ID PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER
    (16) FUNCION -> R_FUNCION . R_MAIN PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    ID              shift and go to state 34
    R_MAIN          shift and go to state 35


state 26

    (9) DECLARACION -> R_VAR LISTAS . R_FLOAT PTCOMA
    (10) LISTAS -> LISTAS . COMA LISTA

    R_FLOAT         shift and go to state 36
    COMA            shift and go to state 37


state 27

    (11) LISTAS -> LISTA .

    R_FLOAT         reduce using rule 11 (LISTAS -> LISTA .)
    COMA            reduce using rule 11 (LISTAS -> LISTA .)


state 28

    (12) LISTA -> ID .

    R_FLOAT         reduce using rule 12 (LISTA -> ID .)
    COMA            reduce using rule 12 (LISTA -> ID .)


state 29

    (6) PILA_STACK -> R_VAR ID CORIZQ . ENTERO CORDER R_FLOAT PTCOMA

    ENTERO          shift and go to state 38


state 30

    (5) PILA_HEAP -> R_VAR ID CORIZQ ENTERO . CORDER R_FLOAT PTCOMA

    CORDER          shift and go to state 39


state 31

    (2) IMPORTES -> R_IMPORT PARIZQ LISTAIMPORTES PARDER PTCOMA .

    R_VAR           reduce using rule 2 (IMPORTES -> R_IMPORT PARIZQ LISTAIMPORTES PARDER PTCOMA .)


state 32

    (3) LISTAIMPORTES -> LISTAIMPORTES PTCOMA CADENA .

    PARDER          reduce using rule 3 (LISTAIMPORTES -> LISTAIMPORTES PTCOMA CADENA .)
    PTCOMA          reduce using rule 3 (LISTAIMPORTES -> LISTAIMPORTES PTCOMA CADENA .)


state 33

    (13) FUNCIONES -> FUNCIONES FUNCION .

    R_FUNCION       reduce using rule 13 (FUNCIONES -> FUNCIONES FUNCION .)
    $end            reduce using rule 13 (FUNCIONES -> FUNCIONES FUNCION .)


state 34

    (15) FUNCION -> R_FUNCION ID . PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    PARIZQ          shift and go to state 40


state 35

    (16) FUNCION -> R_FUNCION R_MAIN . PARIZQ PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    PARIZQ          shift and go to state 41


state 36

    (9) DECLARACION -> R_VAR LISTAS R_FLOAT . PTCOMA

    PTCOMA          shift and go to state 42


state 37

    (10) LISTAS -> LISTAS COMA . LISTA
    (12) LISTA -> . ID

    ID              shift and go to state 28

    LISTA                          shift and go to state 43

state 38

    (6) PILA_STACK -> R_VAR ID CORIZQ ENTERO . CORDER R_FLOAT PTCOMA

    CORDER          shift and go to state 44


state 39

    (5) PILA_HEAP -> R_VAR ID CORIZQ ENTERO CORDER . R_FLOAT PTCOMA

    R_FLOAT         shift and go to state 45


state 40

    (15) FUNCION -> R_FUNCION ID PARIZQ . PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    PARDER          shift and go to state 46


state 41

    (16) FUNCION -> R_FUNCION R_MAIN PARIZQ . PARDER LLAVEIZQ INSTRUCCIONES LLAVEDER

    PARDER          shift and go to state 47


state 42

    (9) DECLARACION -> R_VAR LISTAS R_FLOAT PTCOMA .

    R_VAR           reduce using rule 9 (DECLARACION -> R_VAR LISTAS R_FLOAT PTCOMA .)
    R_FUNCION       reduce using rule 9 (DECLARACION -> R_VAR LISTAS R_FLOAT PTCOMA .)


state 43

    (10) LISTAS -> LISTAS COMA LISTA .

    R_FLOAT         reduce using rule 10 (LISTAS -> LISTAS COMA LISTA .)
    COMA            reduce using rule 10 (LISTAS -> LISTAS COMA LISTA .)


state 44

    (6) PILA_STACK -> R_VAR ID CORIZQ ENTERO CORDER . R_FLOAT PTCOMA

    R_FLOAT         shift and go to state 48


state 45

    (5) PILA_HEAP -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT . PTCOMA

    PTCOMA          shift and go to state 49


state 46

    (15) FUNCION -> R_FUNCION ID PARIZQ PARDER . LLAVEIZQ INSTRUCCIONES LLAVEDER

    LLAVEIZQ        shift and go to state 50


state 47

    (16) FUNCION -> R_FUNCION R_MAIN PARIZQ PARDER . LLAVEIZQ INSTRUCCIONES LLAVEDER

    LLAVEIZQ        shift and go to state 51


state 48

    (6) PILA_STACK -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT . PTCOMA

    PTCOMA          shift and go to state 52


state 49

    (5) PILA_HEAP -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA .

    R_VAR           reduce using rule 5 (PILA_HEAP -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA .)


state 50

    (15) FUNCION -> R_FUNCION ID PARIZQ PARDER LLAVEIZQ . INSTRUCCIONES LLAVEDER
    (17) INSTRUCCIONES -> . INSTRUCCIONES INSTRUCCION
    (18) INSTRUCCIONES -> . INSTRUCCION
    (19) INSTRUCCION -> . ASIGNACION
    (20) INSTRUCCION -> . PRINTS
    (21) INSTRUCCION -> . ETIQUETAS
    (22) INSTRUCCION -> . SALTOS
    (23) INSTRUCCION -> . LLAMADAS
    (24) INSTRUCCION -> . IFS
    (25) INSTRUCCION -> . RETURN
    (31) ASIGNACION -> . ID IGUAL E PTCOMA
    (32) ASIGNACION -> . ARREGLOS IGUAL E PTCOMA
    (27) PRINTS -> . R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA E PARDER PTCOMA
    (28) PRINTS -> . R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA R_INT PARIZQ E PARDER PARDER PTCOMA
    (29) ETIQUETAS -> . ID DOSPUNTITOS
    (30) SALTOS -> . R_GOTO ID PTCOMA
    (53) LLAMADAS -> . ID PARIZQ PARDER PTCOMA
    (44) IFS -> . R_IF RE LLAVEIZQ SALTOS LLAVEDER
    (26) RETURN -> . R_RETURN PTCOMA
    (54) ARREGLOS -> . ID CORIZQ E CORDER
    (55) ARREGLOS -> . ID CORIZQ R_INT PARIZQ E PARDER CORDER

    ID              shift and go to state 53
    R_FMT           shift and go to state 64
    R_GOTO          shift and go to state 65
    R_IF            shift and go to state 66
    R_RETURN        shift and go to state 67

    INSTRUCCIONES                  shift and go to state 54
    INSTRUCCION                    shift and go to state 55
    ASIGNACION                     shift and go to state 56
    PRINTS                         shift and go to state 57
    ETIQUETAS                      shift and go to state 58
    SALTOS                         shift and go to state 59
    LLAMADAS                       shift and go to state 60
    IFS                            shift and go to state 61
    RETURN                         shift and go to state 62
    ARREGLOS                       shift and go to state 63

state 51

    (16) FUNCION -> R_FUNCION R_MAIN PARIZQ PARDER LLAVEIZQ . INSTRUCCIONES LLAVEDER
    (17) INSTRUCCIONES -> . INSTRUCCIONES INSTRUCCION
    (18) INSTRUCCIONES -> . INSTRUCCION
    (19) INSTRUCCION -> . ASIGNACION
    (20) INSTRUCCION -> . PRINTS
    (21) INSTRUCCION -> . ETIQUETAS
    (22) INSTRUCCION -> . SALTOS
    (23) INSTRUCCION -> . LLAMADAS
    (24) INSTRUCCION -> . IFS
    (25) INSTRUCCION -> . RETURN
    (31) ASIGNACION -> . ID IGUAL E PTCOMA
    (32) ASIGNACION -> . ARREGLOS IGUAL E PTCOMA
    (27) PRINTS -> . R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA E PARDER PTCOMA
    (28) PRINTS -> . R_FMT PUNTO R_PRINTF PARIZQ CADENA COMA R_INT PARIZQ E PARDER PARDER PTCOMA
    (29) ETIQUETAS -> . ID DOSPUNTITOS
    (30) SALTOS -> . R_GOTO ID PTCOMA
    (53) LLAMADAS -> . ID PARIZQ PARDER PTCOMA
    (44) IFS -> . R_IF RE LLAVEIZQ SALTOS LLAVEDER
    (26) RETURN -> . R_RETURN PTCOMA
    (54) ARREGLOS -> . ID CORIZQ E CORDER
    (55) ARREGLOS -> . ID CORIZQ R_INT PARIZQ E PARDER CORDER

    ID              shift and go to state 53
    R_FMT           shift and go to state 64
    R_GOTO          shift and go to state 65
    R_IF            shift and go to state 66
    R_RETURN        shift and go to state 67

    INSTRUCCIONES                  shift and go to state 68
    INSTRUCCION                    shift and go to state 55
    ASIGNACION                     shift and go to state 56
    PRINTS                         shift and go to state 57
    ETIQUETAS                      shift and go to state 58
    SALTOS                         shift and go to state 59
    LLAMADAS                       shift and go to state 60
    IFS                            shift and go to state 61
    RETURN                         shift and go to state 62
    ARREGLOS                       shift and go to state 63

state 52

    (6) PILA_STACK -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA .

    R_VAR           reduce using rule 6 (PILA_STACK -> R_VAR ID CORIZQ ENTERO CORDER R_FLOAT PTCOMA .)


state 53

    (31) ASIGNACION -> ID . IGUAL E PTCOMA
    (29) ETIQUETAS -> ID . DOSPUNTITOS
    (53) LLAMADAS -> ID . PARIZQ PARDER PTCOMA
    (54) ARREGLOS -> ID . CORIZQ E CORDER
    (55) ARREGLOS -> ID . CORIZQ R_INT PARIZQ E PARDER CORDER

    IGUAL           shift and go to state 69
    DOSPUNTITOS     shift and go to state 70
    PARIZQ          shift and go to state 71
    CORIZQ          shift and go to state 72


state 54
